Fixed sample line graph, now actually shows the line and has better tick alignment

--- a/graphql-github-vis/css/style.css
+++ b/graphql-github-vis/css/style.css
@@ -9,7 +9,7 @@ body { font: 14px Arial;}
 }
 
 .line {
-	fill: black;
+	fill: none;
 	stroke: steelblue;
 	stroke-width: 2px;
 }
@@ -33,7 +33,7 @@ body { font: 14px Arial;}
 .axis path,
 .axis line {
 	fill: none;
-	stroke: #000;
+	stroke: black;
 	shape-rendering: crispEdges;
 }
 
